Fixed x overflow issue (hopefully)

--- a/css/workpage.css
+++ b/css/workpage.css
@@ -19,6 +19,7 @@ background: linear-gradient(transparent 50%, #222 50%, #222 90%, transparent 90%
 
 body {
     background-color: #f5f5f5;
+    overflow-x: hidden;
 }
 
 h1 {
